fix(YSP-627): datetimes now align correctly
When originally modifying dates, the vertical offset of each were such
that it looked ugly and misaligned.  This was due to the bottom margin
gin was giving the wrappers.  This makes sure these are not present on
the dates, making them look aligned correctly.

--- a/web/themes/custom/ys_admin_theme/scss/admin-ui.scss
+++ b/web/themes/custom/ys_admin_theme/scss/admin-ui.scss
@@ -12,3 +12,7 @@
 .toolbar-horizontal .local-tasks-toolbar-tab .toolbar-menu {
   float: none;
 }
+
+.field--widget-smartdate-inline .field-multiple-table tr .form-item:not(:last-of-type) {
+  margin-bottom: auto !important;
+}
